# modern_opengl

./: CMakeLists.txt  README.md
include/: camera.h  mesh.h  model.h  shader.h
include/glad/: glad.h
resources/models/girl/: Girl.blend  girl OBJ.mtl
resources/models/note/: note_BLEND.mtl
src/: ambient.cpp  basic_lighting_spec.fs  blendDiscard.cpp  blendDiscard.fs  blendSort.cpp  blue.fs  camera1.cpp  camera2.cpp  camera3.cpp  camera4.cpp  camera_class.cpp  castDirection.cpp  castMultiple.cpp  castPoint.cpp  castSpot.cpp  castSpotSoft.cpp  colors.cpp  colors.fs  colors2.fs  coord1.cpp  coord1.vs  coord2.cpp  coord3.cpp  coord_ex1.cpp  coord_ex2.cpp  coord_ex3.cpp  cubeMaps.fs  cubeMaps.vs  cubeMapsEnviron.cpp  cubeMapsRefract.cpp  cubeMapsRefract.fs  cubeMapsSkybox.cpp  depthBuffer.cpp  depthBuffer.fs  depthTest.cpp  depthTest.vs  diffuse.cpp  faceCulling.cpp  framebuffer.cpp  framebufferKernel.cpp  (+78 more)
